# robosub-auv

./: actual_path.csv  planned_path.csv
src/auv_control/: package.xml  setup.py
src/auv_control/auv_control/: AdaThrusters.py  closedLoop.py  controller_node.py  motorControl.py  motorMap.py  openLoop.py  path_follower_node.py
src/auv_hardware/: package.xml  setup.py
src/auv_hardware/auv_hardware/: __init__.py  data_logger_node.py  depth_node.py  hydrophone_node.py  imu_node.py
src/auv_hardware/launch/: sensors_launch.py
src/auv_navigation/: package.xml  setup.cfg  setup.py
src/auv_navigation/auv_navigation/: navigator.py  path_planner_node.py
src/auv_sim/: package.xml  setup.py
src/auv_sim/auv_sim/: Astar.py  Astar_PID_sim.py  environment_markers.py  plot_trajectory.py  sim_vehicle_node.py
src/auv_sim/auv_sim/worlds/: underwater.world
src/auv_sim/launch/: auv_sim.launch.py  mission.launch.py  sim_plot_launch.py
src/auv_sim/meshes/: AUVthruster.stl
src/auv_sim/models/octagon/: model.config  model.sdf
src/auv_sim/urdf/: auv.urdf  auv.urdf.xacro
src/auv_sim/worlds/: underwater.world
src/auv_vision/: package.xml  requirements.txt  setup.py
src/auv_vision/auv_vision/: camera_cnn_live.py  image_augmentation.py  image_videoextraction.py  predict_cnn.py  test_camera.py  train_cnn.py  vision_mission_node.py
src/auv_vision/launch/: vision_launch.py
src/non_ros_scripts/: AdaThruster.py  Gripper.py  IMU_depthsensor_test.py  motorChecks.py  motor_control.py  motor_map.py
